# diyims

./: .gitignore  .pre-commit-config.yaml  Design.md  README.md  README_xdg.md  Ramblings.md  conf  pyproject.toml  pytest.ini  todo.md
docs/diagrams/src/: beaconuc.pu  capture_provider_peer.pu  monitor_peer_publishing.pu  overview.pu  systemoverview.pu
src/diyims/: application_design.md  beacon.py  beacon_cli.py  capture_want_lists.py  class_imports.py  config_utils.py  configuration_cli.py  database_install.py  database_utils.py  dev_clean_up.py  diyims_cmd.py  error_classes.py  fastapi_app.py  general_utils.py  header_chain_utils.py  header_utils - Copy.py  header_utils.py  install.py  install_cli.py  ipfs_utils.py  linux.md  logger_utils.py  main.py  monitor_peer_publishing - Copy.py  monitor_peer_publishing.py  path_utils.py  peer_capture - Copy.py  peer_capture.py  peer_maintenance - Copy.py  peer_maintenance.py  peer_maintenance_utils.py  peer_utils.py  platform_utils.py  provider_capture - Copy.py  provider_capture.py  publish.py  py_version_dep.py  queue_server.py  requests_utils.py  run_clean_up.py  (+17 more)
src/diyims/resources/: boot_trigger.xml  cartext.car  cartext.txt  daily_trigger.xml
src/diyims/sql/: queries.sql  scripts.sql
src/diyims/static/: dummy.css  styles.css
src/diyims/templates/: _navigation.html  address_detail.html  address_list.html  base.html  dev_clean_up.py  header_detail.html  header_list.html  header_status_detail.html  header_status_list.html  item.html  log_detail.html  log_list.html  peer_detail.html  peer_list.html  user.html  want_detail.html  want_list.html
tests/: admin_test.py  component_test.py  conftest.py  function_scope_test.py  mp_test.py  scheduler_test.py  session_scope_test.py  temp_test.py
